--- a/views/write.ejs
+++ b/views/write.ejs
@@ -9,6 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <link rel="stylesheet" href="/public/main.css">
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
@@ -24,44 +25,28 @@
 <body>
 
     <!-- Nav -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Todo App</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="www.naver.com">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Write</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Temporal</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    <%- include('nav.html') %>
 
     <!-- Form -->
-    <form action="/add" method="post">
+    <div class="container">
+        <h4 class="mt-3">할일</h4>
+    <form class="mt-3" action="/add" method="post">
         할일
         <br />
         <div class="input-group mb-3">
             <input type="text" class="form-control" aria-label="Sizing example input"
-                aria-describedby="inputGroup-sizing-default" name="title">
+                aria-describedby="inputGroup-sizing-default" name="title" placeholder="할일을 적어주세요">
         </div>
 
-        Due date
+        날짜
         <br />
         <div class="input-group mb-3">
             <input type="text" class="form-control" aria-label="Sizing example input"
-                aria-describedby="inputGroup-sizing-default" name="date">
+                aria-describedby="inputGroup-sizing-default" name="date" placeholder="날짜를 적어주세요">
         </div>
-        <button type="submit" class="btn btn-light">저장하기</button>
+        <button type="submit" class="btn btn-success">저장하기</button>
     </form>
+</div>
 
 </body>
 
