--- a/views/search.ejs
+++ b/views/search.ejs
@@ -44,6 +44,14 @@
           const inputVal = $('#search-input').val();
           window.location.replace('/search?value=' + inputVal);     // 해당 URL로 바꾸는 방법 (GET 요청과 같다!)
         });
+
+        const data = {name : "name", age : "age"}
+
+        // // JSON을 Query String으로 만들어주는 두가지 코드
+        // $.param(data)
+
+        // $('폼태그').serialize()
+
       </script>
 
       <% for(let i = 0 ; i < posts.length ; i++){ %>
