--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -26,7 +26,8 @@
         <div class="card" style="width: 100%;">
             <div class="card-body">
                 <h5 class="card-title"><%= data.title %></h5>
-                <h6 class="card-subtitle mb-2 text-muted"><%= data.date %></h6>
+                <h6 class="card-subtitle mb-2 text-muted">글쓴이 : <%= data.author %></h6>
+                <h6 class="card-subtitle mb-2 text-muted">날짜 : <%= data.date %></h6>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                     card's content.</p>
                 <a href="#" class="card-link">Card link</a>
