--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,7 +27,7 @@
     <!-- Nav -->
     <%- include('nav.html') %>
 
-    <!-- Form -->
+    <!-- Login Form -->
     <div class="container">
         <h4 class="mt-3">로그인</h4>
     <form class="mt-3" action="/login" method="post">
@@ -44,7 +44,28 @@
             <input type="password" class="form-control" aria-label="Sizing example input"
                 aria-describedby="inputGroup-sizing-default" name="pw" placeholder="비밀번호를 입력해주세요">
         </div>
-        <button type="submit" class="btn btn-success">저장하기</button>
+        <button type="submit" class="btn btn-success">로그인</button>
+    </form>
+
+    <hr/>
+
+    <!-- Register Form -->
+    <h4 class="mt-3">가입하기</h4>
+    <form class="mt-3" action="/register" method="post">
+        아이디
+        <br />
+        <div class="input-group mb-3">
+            <input type="text" class="form-control" aria-label="Sizing example input"
+                aria-describedby="inputGroup-sizing-default" name="id" placeholder="아이디를 입력해주세요">
+        </div>
+
+        비밀번호
+        <br />
+        <div class="input-group mb-3">
+            <input type="password" class="form-control" aria-label="Sizing example input"
+                aria-describedby="inputGroup-sizing-default" name="pw" placeholder="비밀번호를 입력해주세요">
+        </div>
+        <button type="submit" class="btn btn-primary">가입하기</button>
     </form>
 </div>
 
